finished this new implementation which makes everything way more responsive + fixes overflow issue

--- a/src/styles/sections/_footer.scss
+++ b/src/styles/sections/_footer.scss
@@ -2,5 +2,11 @@ footer {
   p {
     font-size: 1.25rem;
     text-align: center;
+
+    @media screen and (max-width: $tablet-breakpoint) {
+      a {
+        display: block;
+      }
+    }
   }
 }
